# exemplo-fastapi

./: README.md  pyproject.toml
api/: main.py
api/models/: item.py
api/routers/: itens.py
